--- a/object-detection-mobile-web-app-template/index.html
+++ b/object-detection-mobile-web-app-template/index.html
@@ -64,6 +64,12 @@
     </div>
     <div class="row">
       <div style="position:relative;" class="p-0 m-0">
+        <div id="loading" class="text-center">
+          <div class="spinner-border" role="status">
+            <span class="visually-hidden">Loading...</span>
+          </div>
+          Loading..
+        </div>
         <div id="render">
           <video id="webcam" style="position:relative;left:0px;top:0px;width:100%;height:auto;" autoplay
             playsinline></video>
